tests/compilation_error/variable_redeclaration_1.ll
int a = 5
int b = 4
int a = 3
